<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <ImageView
        android:id="@+id/imv_steam_logo"
        android:layout_width="213dp"
        android:layout_height="132dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/ed_nickname_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        android:textColor="@color/SecondTextColor"
        android:textColorHint="@color/SecondTextColor" />

    <EditText
        android:id="@+id/ed_senha_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="187dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="text|textPassword"
        android:textColor="@color/SecondTextColor"
        android:textColorHint="@color/SecondTextColor" />

    <Button
        android:id="@+id/bt_logar_home"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="116dp"
        android:background="@color/ToolbarButtonsColor"
        android:text="@string/logar" />

    <TextView
        android:id="@+id/tv_registar_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp"
        android:text="@string/registre_se"
        android:textColor="@color/SecondTextColor" />
</RelativeLayout>