<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity">

    <ImageView
        android:id="@+id/imv_foto_cadastro"
        android:layout_width="99dp"
        android:layout_height="91dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/userimage"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/ed_nickname_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        android:textColor="@color/SecondTextColor"
        android:textColorHint="@color/SecondTextColor" />

    <EditText
        android:id="@+id/ed_email_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="153dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/SecondTextColor" />

    <EditText
        android:id="@+id/ed_senha_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="216dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColorHint="@color/SecondTextColor" />

    <EditText
        android:id="@+id/ed_confsenha_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="185dp"
        android:ems="10"
        android:hint="Confirme sua Senha"
        android:inputType="textPassword"
        android:textColorHint="@color/SecondTextColor" />

    <TextView
        android:id="@+id/tv_steamid_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="140dp"
        android:text="DIGITE O SEU STEAMID:"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ed_steamid_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="81dp"
        android:ems="10"
        android:hint="@string/steamid"
        android:inputType="number"
        android:textColorHint="@color/SecondTextColor" />

    <Button
        android:id="@+id/bt_registrar_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@color/ToolbarButtonsColor"
        android:text="@string/registrar" />
</RelativeLayout>