<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout_perfill"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_bemvindo_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:text="@string/bem_vindo"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imv_foto_perfil"
            android:layout_width="125dp"
            android:layout_height="128dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            android:contentDescription="@string/userimage"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_numerojogos_perfil"
            android:layout_alignParentStart="true"
            android:background="@color/BackGourndTextViewsColor"
            android:text="@string/email2"
            android:textColor="@color/SecondTextColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_numerojogos_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="230dp"
            android:background="@color/BackGourndTextViewsColor"
            android:text="@string/nuemro_de_jogos"
            android:textColor="@color/SecondTextColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_steamid_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_numerojogos_perfil"
            android:layout_marginTop="-230dp"
            android:background="@color/BackGourndTextViewsColor"
            android:text="@string/steamid2"
            android:textColor="@color/SecondTextColor"
            android:textSize="18sp" />


    </RelativeLayout>

    <android.support.design.widget.NavigationView

        android:id="@+id/nv_layout_perfil"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/NavigatioDrawerMenuColor"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/navigation_header">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>

